just added more backgrounds and fixed some gifs. Need to add content, opacity boxes behind content, and more info for the quiz, as well as another plugin

--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,8 @@ section {
     margin: 0;
 }
 
-#section-section-history, #section-section1, #section-section2,
-#section-section3, #section-section4{
+#section-groening, #section-life, #section-simpsons,
+#section-futurama, #section-disenchantment{
   display:grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;/*sets height of rows*/
@@ -102,30 +102,29 @@ width:70%;
 #homer{
   width:100%;
 }
+#homer, #bender, #fry, #binky, #luci{
+  outline-style: solid;
+}
 #bender{
-    width:100%;
+    width:80%;
 }
 #fry{
   width:100%;
 }
 #binky{
   width:60%;
+  outline-style: dotted;
 }
 .shadow{
   width:80%;
+  padding-bottom: 2%;
 
 }
 
 
 
 
-#section-section0 {
-    background: orange;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
+
 button{
   padding-left: 5%;
   padding-right: 5%;
@@ -134,29 +133,39 @@ button{
 
 
 }
-#section-section0 {
-    background: #F7D02C;
+#section-main {
+    background: orange;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
-#section-section-history{
+#section-groening{
     background: #F7B7D2;
 }
 
-#section-section1 {
+#section-life{
     background: white;
+
 }
 
-#section-section2 {
-    background: #C72042;
+#section-simpsons{
+  background-image: url(../img/house.png);
+      background-repeat:no-repeat;
+  background-size: cover;
 }
 
-#section-section3 {
-    background: #20BAC7;
+#section-futurama{
+    background-image: url(../img/fut-back.jpg);
+    background-repeat:no-repeat;
+    background-size:cover;
 }
 
-#section-section4 {
-    background: #c0392b;
-}
-#section-section-quiz{
+#section-disenchantment {
+  background-image: url(../img/castle.jpg);
+  background-repeat:no-repeat;
+  background-size: cover;}
+#section-quiz{
   z-index:10;
 }
 
@@ -195,3 +204,13 @@ button{
   flex-direction: column;
 
 }
+
+
+
+/*House img link: https://ecodiario.eleconomista.es/viralplus/noticias/9317872/08/18/www.liveramp.com/service-privacy-policy/www.indexexchange.com/privacy
+Binky: https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwi4y7Hp2v_dAhUKuFMKHRv6BHEQjRx6BAgBEAU&url=http%3A%2F%2Ftipos-de-cancer.info%2Fsimpsons-matt-groening-life.php&psig=AOvVaw3x_kWfVhsr1j4GJLF53IGm&ust=1539392557533385
+Futurama Background: https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjjx-uE6__dAhUH31MKHahSBIcQjRx6BAgBEAU&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F567383253027579741%2F&psig=AOvVaw2qW_a5TJEBvBOrkzQZ2DVS&ust=1539397043207639
+Luci img: https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjI67_U9__dAhUJrFMKHZSDAW4QjRx6BAgBEAU&url=https%3A%2F%2Fwww.deviantart.com%2Fluxkirigaya%2Fart%2FDisenchantment-Luci-760055201&psig=AOvVaw1GyLIxQOhbYupn1Q6SUG21&ust=1539400436374079
+Castle img: https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwik_uyK-f_dAhWBwFMKHVPyB7gQjRx6BAgBEAU&url=https%3A%2F%2Fwww.imdb.com%2Ftitle%2Ftt7177814%2Fmediaviewer%2Frm2331932672&psig=AOvVaw2Gy6VAgtYidMQ7VmsXTRX8&ust=1539400746141289
+
+Bender gif: https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjcjsqp-P_dAhWK61MKHb2NC5AQjRx6BAgBEAU&url=https%3A%2F%2Fgifer.com%2Fen%2F2vDa&psig=AOvVaw0_qyQPNB_P7n0tdUH7dyPM&ust=1539400550880683
